<resources>
    <string name="app_name">Intervention</string>

    <string name="navigation_drawer_open" translatable="false">navigation drawer open</string>
    <string name="navigation_drawer_close" translatable="false">navigation drawer close</string>

    <string name="name">Name</string>
    <string name="Account">Account</string>

    <string name="Require">Require</string>
    <string name="Six_character_required">Six character required</string>

    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="email">email</string>
    <string name="password">password</string>

    <string name="Create_Company">Create Company</string>
    <string name="Company_name">Company Name</string>
    <string name="Company_address">Company Address</string>
    <string name="Company_phone">Company Phone</string>
    <string name="Company_email">Company Email</string>

    <string name="Sign_out">Sign out</string>
    <string name="Reset_password">Reset Password</string>
    <string name="Change_password">Change Password</string>

    <string name="Successfully_deleted">successfully deleted</string>
    <string name="Login_Successful">Login Successful</string>
    <string name="Create_Successfully">Create Successfully</string>
    <string name="Failure_Login">Failure Login</string>
    <string name="Failure_Create">Failure Create</string>

    <string name="Edit">Edit</string>
    <string name="Save">Save</string>


    <string name="Create">Create</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Login">Login</string>

    <string name="Profil_">Profil :</string>
    <string name="Company_">Company :</string>
    <string name="Login_Info">Login Info</string>
    <string name="Change_login_details">Change login details</string>
    <string name="Success_update_login_data">Success update login data</string>
    <string name="Failure_login">Password is invalid or user does not have a password</string>

</resources>