<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intervention_ticket_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_intervention_ticket"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/background_toolbar"
                app:title="@string/app_name"
                app:titleTextColor="@color/white"
                android:theme="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/nav_host_intervention_slip"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:defaultNavHost="true"
                app:navGraph="@navigation/nav_graph_intervention_slip" />
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/layout_navigation_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/header_drawer_intervention_ticket" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginVertical="16dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/Account"
                        android:textColor="@color/grayDark"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/button_account_drawer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardElevation="0dp"
                        app:rippleColor="@color/goldDark">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:minHeight="50dp"
                            android:orientation="horizontal"
                            android:paddingStart="16dp"
                            android:paddingEnd="8dp">

                            <ImageView
                                android:id="@+id/icon_button_account_drawer"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:src="@drawable/ic_login" />

                            <TextView
                                android:id="@+id/text_button_account_drawer"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_weight="90"
                                android:text="@string/name"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.drawerlayout.widget.DrawerLayout>